# data_analysis_with_python

./: README.md  pyproject.toml
demographic_data_analyzer/: demographic_data_analyzer.py
mean_variance_standard_deviation_calcualtor/: mean_var_std.py
medical-data-visualizer/: medical_data_visualizer.py
page-view-time-series-visualizer/: time_series_visualizer.py
sea-level-predictor/: sea_level_predictor.py
