[tool.poetry]
name = "data_analysis_with_python"
version = "0.1.0"
description = ""
authors = ["Theresa M"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"
scipy = "*"
seaborn = "*"
numpy = "^1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
